--- a/index.html
+++ b/index.html
@@ -24,13 +24,34 @@
                 </svg>
             </button>
         </header>
+        <main class="main">
+            <aside class="main__aside page">
+                <div class="aside__line"></div>
+                <div class="aside__article">
+                    <span class="aside__span">01</span>
+                </div>
+                <div class="aside__line"></div>
+            </aside>
+            <section class="main__section first-screen">
+                <h4 class="main__subtitle">Вступление</h4>
+                <h1 class="main__heading">Код и дизайн</h1>
+                <p class="main__text">Давайте знакомиться! Меня зовут Данила. Я являюсь UX/UI дизайнером и Full-stack
+                    JavaScript разработчиком. С удовольствием поработаю с вами!</p>
+            </section>
+            <aside class="main__aside progress">
+                <div class="aside__counter">01 <br> / <br> 04</div>
+                <div class="aside__progress-bar">
+                    <div class="aside__progress"></div>
+                </div>
+            </aside>
+        </main>
         <footer class="footer">
             <div class="footer__social social">
                 <ul class="social__list">
-                    <li class="social__element"><a href="" class="social__link">github</a></li>
-                    <li class="social__element"><a href="" class="social__link">behance</a></li>
-                    <li class="social__element"><a href="" class="social__link">vk</a></li>
-                    <li class="social__element"><a href="" class="social__link">telegram</a></li>
+                    <li class="social__element"><a href="#" class="social__link">github</a></li>
+                    <li class="social__element"><a href="#" class="social__link">behance</a></li>
+                    <li class="social__element"><a href="#" class="social__link">vk</a></li>
+                    <li class="social__element"><a href="#" class="social__link">telegram</a></li>
                 </ul>
             </div>
             <button class="footer__arrow">
