--- a/index.html
+++ b/index.html
@@ -24,14 +24,15 @@
                 </svg>
             </button>
         </header>
-
         <footer class="footer">
             <div class="footer__social social">
                 <ul class="social__list">
-                    <li class="social__element"><a href="#" class="social__link">github</a></li>
-                    <li class="social__element"><a href="#" class="social__link">behance</a></li>
-                    <li class="social__element"><a href="#" class="social__link">vk</a></li>
-                    <li class="social__element"><a href="#" class="social__link">telegram</a></li>
+                    <li class="social__element"><a href="https://github.com/ShotMeow" class="social__link">github</a>
+                    </li>
+                    <li class="social__element"><a href="https://www.behance.net/shotmeow"
+                            class="social__link">behance</a></li>
+                    <li class="social__element"><a href="https://vk.com/shotmeow" class="social__link">vk</a></li>
+                    <li class="social__element"><a href="https://t.me/ShotMeow" class="social__link">telegram</a></li>
                 </ul>
             </div>
             <button class="footer__arrow">
