--- a/index.html
+++ b/index.html
@@ -24,6 +24,216 @@
                 </svg>
             </button>
         </header>
+        <main class="main">
+            <section class="main__section first-screen">
+                <aside class="main__aside page">
+                    <div class="aside__line"></div>
+                    <div class="aside__circle">
+                        <span class="aside__article">01</span>
+                    </div>
+                    <div class="aside__line"></div>
+                </aside>
+                <article class="main__article article">
+                    <h4 class="article__subtitle">Вступление</h4>
+                    <h1 class="article__title">Код и дизайн</h1>
+                    <p class="article__text">Давайте знакомиться! Меня зовут Данила. Я являюсь UX/UI дизайнером и
+                        Full-stack JavaScript разработчиком. С удовольствием поработаю с вами!</p>
+                </article>
+                <aside class="main__aside progress">
+                    <p class="aside__article">
+                        01 <br> / <br> 04
+                    </p>
+                    <div class="aside__progress-bar">
+                        <div class="aside__progress"></div>
+                    </div>
+                </aside>
+            </section>
+            <section class="main__section about">
+                <aside class="main__aside page">
+                    <div class="aside__line"></div>
+                    <div class="aside__circle">
+                        <span class="aside__article">02</span>
+                    </div>
+                    <div class="aside__line"></div>
+                </aside>
+                <article class="main__article article">
+                    <div class="article__title-block">
+                        <span class="article__title-background">Обо мне</span>
+                        <h2 class="article__title">Обо мне</h2>
+                    </div>
+                    <div class="article__wrapper">
+                        <div class="article__navigator navigator">
+                            <ul class="navigator__list">
+                                <li class="navigator__element active"><button class="navigator__button"><span
+                                            class="navigator__span">/01</span> Обо мне</button></li>
+                                <li class="navigator__element"><button class="navigator__button"><span
+                                            class="navigator__span">/02</span> Опыт работы</button></li>
+                                <li class="navigator__element"><button class="navigator__button"><span
+                                            class="navigator__span">/03</span> Технологии</button></li>
+                            </ul>
+                        </div>
+                        <div class="article__info">
+                            <h3 class="article__name">Маврин Данила Андреевич</h3>
+                            <h5 class="article__subtitle">UX/UI Designer / Full-stack JS Developer</h5>
+                            <p class="article__text">Человек, обожающий свою работу и всегда идущий вперёд.
+                                Я верю, что человек может добиться всего, если он поставит цель и будет к ней идти.
+                                <br><br>
+                                С 14 лет я увлекаюсь веб-технологиями, мне всегда было интересно, как устроена всемирная
+                                паутина. Для меня главное в жизни - саморазвитие, я ценю в людях ум и креативность,
+                                помешан на здоровом образе жизни и волейболе.
+                            </p>
+                            <h4 class="article__character">Ответственный, Коммуникабельный, Целеустремленный</h4>
+                        </div>
+                    </div>
+                </article>
+                <aside class="main__aside progress">
+                    <p class="aside__article">
+                        02 <br> / <br> 04
+                    </p>
+                    <div class="aside__progress-bar">
+                        <div class="aside__progress"></div>
+                    </div>
+                </aside>
+            </section>
+            <section class="main__section portfolio">
+                <aside class="main__aside page">
+                    <div class="aside__line"></div>
+                    <div class="aside__circle">
+                        <span class="aside__article">03</span>
+                    </div>
+                    <div class="aside__line"></div>
+                </aside>
+                <article class="main__article article">
+                    <div class="article__title-block">
+                        <span class="article__title-background">Портфолио</span>
+                        <h2 class="article__title">Портфолио</h2>
+                    </div>
+                    <div class="article__wrapper">
+                        <a href="#" class="article__card-link">
+                            <div class="article__card card">
+                                <div class="card__info">
+                                    <p class="card__item">01</p>
+                                    <div class="card__text-block">
+                                        <h3 class="card__name">Cloud Skinchanger</h3>
+                                        <h4 class="card__skills">Front-end & Design</h4>
+                                    </div>
+                                </div>
+                                <div class="card__arrow">
+                                    <svg width="51" height="16" viewBox="0 0 51 16" fill="none"
+                                        xmlns="http://www.w3.org/2000/svg">
+                                        <path
+                                            d="M50.7071 8.70711C51.0976 8.31658 51.0976 7.68342 50.7071 7.29289L44.3431 0.928932C43.9526 0.538408 43.3195 0.538408 42.9289 0.928932C42.5384 1.31946 42.5384 1.95262 42.9289 2.34315L48.5858 8L42.9289 13.6569C42.5384 14.0474 42.5384 14.6805 42.9289 15.0711C43.3195 15.4616 43.9526 15.4616 44.3431 15.0711L50.7071 8.70711ZM0 9H50V7H0L0 9Z"
+                                            fill="white" />
+                                    </svg>
+
+                                </div>
+                            </div>
+                        </a>
+                        <a href="#" class="article__card-link">
+                            <div class="article__card card">
+                                <div class="card__info">
+                                    <p class="card__item">02</p>
+                                    <div class="card__text-block">
+                                        <h3 class="card__name">AnimeZero</h3>
+                                        <h4 class="card__skills">Design</h4>
+                                    </div>
+                                </div>
+                                <div class="card__arrow">
+                                    <svg width="51" height="16" viewBox="0 0 51 16" fill="none"
+                                        xmlns="http://www.w3.org/2000/svg">
+                                        <path
+                                            d="M50.7071 8.70711C51.0976 8.31658 51.0976 7.68342 50.7071 7.29289L44.3431 0.928932C43.9526 0.538408 43.3195 0.538408 42.9289 0.928932C42.5384 1.31946 42.5384 1.95262 42.9289 2.34315L48.5858 8L42.9289 13.6569C42.5384 14.0474 42.5384 14.6805 42.9289 15.0711C43.3195 15.4616 43.9526 15.4616 44.3431 15.0711L50.7071 8.70711ZM0 9H50V7H0L0 9Z"
+                                            fill="white" />
+                                    </svg>
+
+                                </div>
+                            </div>
+                        </a>
+                        <a href="#" class="article__card-link">
+                            <div class="article__card card">
+                                <div class="card__info">
+                                    <p class="card__item">03</p>
+                                    <div class="card__text-block">
+                                        <h3 class="card__name">Driving School</h3>
+                                        <h4 class="card__skills">Front-end & Design</h4>
+                                    </div>
+                                </div>
+                                <div class="card__arrow">
+                                    <svg width="51" height="16" viewBox="0 0 51 16" fill="none"
+                                        xmlns="http://www.w3.org/2000/svg">
+                                        <path
+                                            d="M50.7071 8.70711C51.0976 8.31658 51.0976 7.68342 50.7071 7.29289L44.3431 0.928932C43.9526 0.538408 43.3195 0.538408 42.9289 0.928932C42.5384 1.31946 42.5384 1.95262 42.9289 2.34315L48.5858 8L42.9289 13.6569C42.5384 14.0474 42.5384 14.6805 42.9289 15.0711C43.3195 15.4616 43.9526 15.4616 44.3431 15.0711L50.7071 8.70711ZM0 9H50V7H0L0 9Z"
+                                            fill="#515151" />
+                                    </svg>
+
+                                </div>
+                            </div>
+                        </a>
+                        <a href="#" class="article__card-link">
+                            <div class="article__card card">
+                                <div class="card__info">
+                                    <p class="card__item">04</p>
+                                    <div class="card__text-block">
+                                        <h3 class="card__name">Yandex Music Reworking</h3>
+                                        <h4 class="card__skills">Design</h4>
+                                    </div>
+                                </div>
+                                <div class="card__arrow">
+                                    <svg width="51" height="16" viewBox="0 0 51 16" fill="none"
+                                        xmlns="http://www.w3.org/2000/svg">
+                                        <path
+                                            d="M50.7071 8.70711C51.0976 8.31658 51.0976 7.68342 50.7071 7.29289L44.3431 0.928932C43.9526 0.538408 43.3195 0.538408 42.9289 0.928932C42.5384 1.31946 42.5384 1.95262 42.9289 2.34315L48.5858 8L42.9289 13.6569C42.5384 14.0474 42.5384 14.6805 42.9289 15.0711C43.3195 15.4616 43.9526 15.4616 44.3431 15.0711L50.7071 8.70711ZM0 9H50V7H0L0 9Z"
+                                            fill="white" />
+                                    </svg>
+
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                </article>
+                <aside class="main__aside progress">
+                    <p class="aside__article">
+                        03 <br> / <br> 04
+                    </p>
+                    <div class="aside__progress-bar">
+                        <div class="aside__progress"></div>
+                    </div>
+                </aside>
+            </section>
+            <section class="main__section contact">
+                <aside class="main__aside page">
+                    <div class="aside__line"></div>
+                    <div class="aside__circle">
+                        <span class="aside__article">04</span>
+                    </div>
+                    <div class="aside__line"></div>
+                </aside>
+                <article class="main__article article">
+                    <h2 class="article__title">Заинтересовали мои <br> услуги?</h2>
+                    <h4 class="article__subtitle">Свяжитесь со мной</h4>
+                    <a href="mailto:shotmeow@gmail.com" class="article__email">shotmeow@gmail.com</a>
+                    <h4 class="article__social-subtitle">Социальные сети</h4>
+                    <ul class="article__social-list social">
+                        <li class="social__element"><a href="https://github.com/ShotMeow"
+                                class="social__link">github</a>
+                        </li>
+                        <li class="social__element"><a href="https://www.behance.net/shotmeow"
+                                class="social__link">behance</a></li>
+                        <li class="social__element"><a href="https://vk.com/shotmeow" class="social__link">vk</a></li>
+                        <li class="social__element"><a href="https://t.me/ShotMeow" class="social__link">telegram</a>
+                        </li>
+                    </ul>
+                </article>
+                <aside class="main__aside progress">
+                    <p class="aside__article">
+                        04 <br> / <br> 04
+                    </p>
+                    <div class="aside__progress-bar">
+                        <div class="aside__progress"></div>
+                    </div>
+                </aside>
+            </section>
+        </main>
         <footer class="footer">
             <div class="footer__social social">
                 <ul class="social__list">
