--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                             </p>
                             <h4 class="article__character">Ответственный, Коммуникабельный, Целеустремленный</h4>
                         </div>
-                        <div class="article__work chapter hidden">
+                        <div class="article__work chapter hidden-full">
                             <div class="article__company company">
                                 <div class="company__logo">
                                     <svg width="100" height="100" viewBox="0 0 99 20" fill="none"
@@ -141,7 +141,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="article__technologies chapter hidden">
+                        <div class="article__technologies chapter hidden-full">
                             <div class="chapter__inner">
                                 <div class="chapter__front">
                                     <button class="article__button active">Front-end (Клиентская часть) <svg width="16"
@@ -176,7 +176,7 @@
                                                 fill="white" />
                                         </svg>
                                     </button>
-                                    <ul class="chapter__list hidden">
+                                    <ul class="chapter__list hidden-full">
                                         <li class="chapter__element">
                                             <span class="chapter__span">Язык</span>
                                             <h4 class="chapter__tech">JavaScript & TypeScript</h4>
@@ -199,7 +199,7 @@
                                                 fill="white" />
                                         </svg>
                                     </button>
-                                    <ul class="chapter__list hidden">
+                                    <ul class="chapter__list hidden-full">
                                         <li class="chapter__element">
                                             <span class="chapter__span">Приложение</span>
                                             <h4 class="chapter__tech">Figma</h4>
