--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             </a>
             <div class="header__menu">
                 <nav class="header__nav nav">
-                    <ul class="nav__list hidden">
+                    <ul class="nav__list hidden-full">
                         <li class="nav__element"><a href="#firstScreen" class="nav__link">Главная</a></li>
                         <li class="nav__element"><a href="#about" class="nav__link">Обо мне</a></li>
                         <li class="nav__element"><a href="#portfolio" class="nav__link">Портфолио</a></li>
