--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
                         <h2 class="article__title">Портфолио</h2>
                     </div>
                     <div class="article__wrapper">
-                        <a href="#" class="article__card-link">
+                        <a href="https://cloud-skinchanger-reworked.vercel.app/" class="article__card-link">
                             <div class="article__card card">
                                 <div class="card__info">
                                     <p class="card__item">01</p>
@@ -258,7 +258,8 @@
                                 </div>
                             </div>
                         </a>
-                        <a href="#" class="article__card-link">
+                        <a href="https://www.figma.com/file/xBGZyCvHP6wgXxMABs7rGo/AnimeZero?node-id=0%3A1"
+                            class="article__card-link">
                             <div class="article__card card">
                                 <div class="card__info">
                                     <p class="card__item">02</p>
@@ -278,7 +279,8 @@
                                 </div>
                             </div>
                         </a>
-                        <a href="#" class="article__card-link">
+                        <a href="https://www.figma.com/file/HIAUL2g0C5g29tUDpNYUoh/Driving-School?node-id=0%3A1"
+                            class="article__card-link">
                             <div class="article__card card">
                                 <div class="card__info">
                                     <p class="card__item">03</p>
@@ -298,7 +300,8 @@
                                 </div>
                             </div>
                         </a>
-                        <a href="#" class="article__card-link">
+                        <a href="https://www.figma.com/file/W4CsKCYAghhlO206BLEUm2/Yandex-Music?node-id=0%3A1"
+                            class="article__card-link">
                             <div class="article__card card">
                                 <div class="card__info">
                                     <p class="card__item">04</p>
